--- a/example/index.html
+++ b/example/index.html
@@ -13,17 +13,17 @@
             rel="stylesheet"
             href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css"
         />
-        <link rel="stylesheet" href="/dist/index.min.css" />
+        <link rel="stylesheet" href="dist/index.min.css" />
     </head>
     <body>
         <div id="app"></div>
         <script>
             window.$docsify = {
                 name: "Example for Demo Plugin",
-                loadSidebar: true
+                loadSidebar: true,
             };
         </script>
         <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-        <script src="/dist/index.min.js"></script>
+        <script src="dist/index.min.js"></script>
     </body>
 </html>
